--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -464,6 +464,8 @@
         "computational-support": "Vi får även stöd i form av hårdvara från ",
         "funding": "Finansiellt stöd",
         "disclaimer": "Ansvarsfriskrivning",
-        "genai-long": "Innehåll genererat av AI kan vara felaktigt eller missvisande, verifiera alltid informationen. Allt innehåll genererat av AI på denna sida är märkt med följande symbol"
+        "genai-long": "Innehåll genererat av AI kan vara felaktigt eller missvisande, verifiera alltid informationen. Allt innehåll genererat av AI på denna sida är märkt med följande symbol",
+        "run-args": "Argument till körning",
+        "nothing-to-do": "Inget att göra"
     }
 }
