--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -38,6 +38,7 @@
         "menu-create-new": "Create new",
         "menu-profile": "Profile",
         "menu-kthcloud": "kthcloud",
+        "menu-maia": "MAIA",
         "menu-status": "Server status",
         "menu-docs": "Docs",
         "menu-support": "Discord",
