--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -463,6 +463,7 @@
         "kth-digitalization-platform": "KTH Digitaliseringsplattformen",
         "computational-support": "Vi får även stöd i form av hårdvara från ",
         "funding": "Finansiellt stöd",
+        "menu-maia": "MAIA",
         "disclaimer": "Ansvarsfriskrivning",
         "genai-long": "Innehåll genererat av AI kan vara felaktigt eller missvisande, verifiera alltid informationen. Allt innehåll genererat av AI på denna sida är märkt med följande symbol"
     }
