--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -187,6 +187,7 @@
         "deploy-with-github-actions": "Deploy with GitHub Actions",
         "deploy-with-github-actions-subheader": "Add this to your GitHub Actions workflow to publish your app.",
         "copy-to-clipboard": "Copy to clipboard",
+        "copied": "Copied!",
         "unsure-where-to-paste-this": "Unsure where to paste this?",
         "github-actions-quickstart": "GitHub Actions quickstart",
         "hide": "Hide",
