--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -176,7 +176,7 @@
         "error-deleting-resource": "Error deleting resource: ",
         "deployment-in-progress": "deployment in progress... ",
         "failed-update": "Failed to update",
-        "visit-page": "Visit page",
+        "visit-page": "Visit",
         "storage-manager": "Manage storage",
         "saving-domain-update": "Saving domain update...",
         "could-not-update-domain": "Could not update domain",
@@ -187,6 +187,7 @@
         "deploy-with-github-actions": "Deploy with GitHub Actions",
         "deploy-with-github-actions-subheader": "Add this to your GitHub Actions workflow to publish your app.",
         "copy-to-clipboard": "Copy to clipboard",
+        "copied": "Copied!",
         "unsure-where-to-paste-this": "Unsure where to paste this?",
         "github-actions-quickstart": "GitHub Actions quickstart",
         "hide": "Hide",
@@ -466,6 +467,8 @@
         "computational-support": "We receive invaluable computational support from ",
         "funding": "Funding",
         "disclaimer": "Disclaimer",
-        "genai-long": "AI generated content may be inaccurate or misleading, always verify the information. All AI generated content on this page is marked with the following symbol"
+        "genai-long": "AI generated content may be inaccurate or misleading, always verify the information. All AI generated content on this page is marked with the following symbol",
+        "name-cannot-be-empty": "Name cannot be empty",
+        "saving-name": "Saving name..."
     }
 }
