--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -471,6 +471,7 @@
         "name-cannot-be-empty": "Name cannot be empty",
         "saving-name": "Saving name...",
         "rfc-1035-1": " must adhere to ",
-        "rfc-1035-2": ": only lowercase alphanumeric characters or '-', max 63 characters, start with a letter, and end with an alphanumeric character."
+        "rfc-1035-2": ": only lowercase alphanumeric characters or '-', max 63 characters, start with a letter, and end with an alphanumeric character.",
+        "clear-on-reconnect": "Clear on reconnect"
     }
 }
