Begin work for vmv2

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -472,6 +472,8 @@
         "saving-name": "Saving name...",
         "rfc-1035-1": " must adhere to ",
         "rfc-1035-2": ": only lowercase alphanumeric characters or '-', max 63 characters, start with a letter, and end with an alphanumeric character.",
-        "clear-on-reconnect": "Clear on reconnect"
+        "clear-on-reconnect": "Clear on reconnect",
+        "vmv1-deprecation": "This VM is using an unsupported hypervisor. Please recreate it to use the latest features.",
+        "deprecated": "Deprecated"
     }
 }
