--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -490,6 +490,7 @@
         "relax-and-enjoy-the-sun": "Ta det lugnt och njut av solen 🌞",
         "waiting-for-gpu-lease": "Du står i kö för att låna ett grafikkort. Du kommer att bli meddelad när det är din tur.",
         "gpu-groups-subheader": "Här är alla grafikkort på kthcloud. Du kan stå i kö och få tillgång när det blir tillgängligt.",
-        "gpu-leases-subheader": "Dina aktiva GPU-lån. Använd det eller ge tillbaka det, det är upp till dig."
+        "gpu-leases-subheader": "Dina aktiva GPU-lån. Använd det eller ge tillbaka det, det är upp till dig.",
+        "manage-gpu-leases": "Hantera GPU-lån"
     }
 }
