Add more VM v2 features (#238)
* Begin GPU manager #225

* Fix formatting

* Update DangerZone Transfer ownership to VM v2 #228

* Proxy manager use VM v2 api #226

* Bump dependencies

* Move to CI/CD npm package, bump dependencies

* Cleanup GPU #225

* Fix formatting

* Fix warnings

* Fix VM v2 command API renamed to action, closes #237

* Show GPU in deploy page

* Cleanup GpuManager #255

* Fix missing space in profile

* Disable proxy manager

--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -87,7 +87,7 @@
         "internal": "Intern",
         "deploy-with-github-actions-subheader": "Lägg till GitHub Actions-filen i ditt projekt för att publicera din app automatiskt.",
         "no-deployments-found": "Inga resurser hittades",
-        "admin-loaded-gpus": "hämtade GPUer",
+        "admin-loaded-gpus": "hämtade grafikkort",
         "admin-loaded-teams": "hämtade grupper",
         "admin-loaded-jobs": "hämtade jobb",
         "menu-dashboard": "Översikt",
@@ -473,6 +473,24 @@
         "rfc-1035-2": ": endast små bokstäver, siffror eller '-', max 63 tecken, börja med en bokstav och sluta med en alfanumerisk karaktär.",
         "clear-on-reconnect": "Rensa vid anslutning",
         "vmv1-deprecation": "Denna typ av VM är utfasad. Vänligen skapa om den för att använda de senaste funktionerna.",
-        "deprecated": "Utfasad"
+        "deprecated": "Utfasad",
+        "wait-in-line": "Stå i kö",
+        "available": "Tillänglig",
+        "total": "Total",
+        "gpu-types": "GPU typer",
+        "gpu-leases": "GPU lån",
+        "nothing-to-see-here": "Inget att se här 🌞",
+        "already-active": "Redan aktiverad",
+        "activate": "Aktivera",
+        "create-a-vm-first": "Skapa en VM först",
+        "position-in-line": "Plats i kön",
+        "lease-duration": "Lånets längd",
+        "created-at": "Skapades",
+        "select-vm": "Välj VM",
+        "relax-and-enjoy-the-sun": "Ta det lugnt och njut av solen 🌞",
+        "waiting-for-gpu-lease": "Du står i kö för att låna ett grafikkort. Du kommer att bli meddelad när det är din tur.",
+        "gpu-groups-subheader": "Här är alla grafikkort på kthcloud. Du kan stå i kö och få tillgång när det blir tillgängligt.",
+        "gpu-leases-subheader": "Dina aktiva GPU-lån. Använd det eller ge tillbaka det, det är upp till dig.",
+        "manage-gpu-leases": "Hantera GPU-lån"
     }
 }
