--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -492,6 +492,8 @@
         "waiting-for-gpu-lease": "You are in line for a GPU lease. You will be notified when it is your turn.",
         "gpu-groups-subheader": "These are all the GPUs on kthcloud. You can wait in line and receive access once it becomes available.",
         "gpu-leases-subheader": "The currents GPU leases at your disposal. Use it or give it back, it's up to you.",
-        "manage-gpu-leases": "Manage GPU leases"
+        "manage-gpu-leases": "Manage GPU leases",
+        "switch-to-beta": "Switch to beta",
+        "switch-to-release": "Switch to release"
     }
 }
