--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -446,7 +446,7 @@
         "edit-domain": "Edit domain",
         "clear-domain": "Clear domain",
         "setup-custom-domain-0": "Point a CNAME record to app.cloud.cbh.kth.se and enter your domain below.",
-        "setup-custom-domain-0-warning": "NB! If you are using Cloudflare or some other proxy service, disable the proxy so our DNS lookup resolves correctly. You can reenable the proxy after the verification if completed.",
+        "setup-custom-domain-0-warning": "NB! If you are using Cloudflare or some other proxy service, disable the proxy so our DNS lookup resolves correctly. You can reenable the proxy after the verification is completed.",
         "setup-custom-domain-1": "Verify domain ownership by adding a TXT record with the value below to your domain.",
         "setup-custom-domain-1-table": "Your DNS records should look something like this",
         "setup-custom-domain-2": "Done! Your deployment should soon be accessible using your domain. You can check the status on the domain section.",
