Update resource status labels, closes #243

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -387,10 +387,14 @@
         "resourceUnknown": "Unknown",
         "resourceStopped": "Stopped",
         "resourceBeingCreated": "Being Created",
+        "resourceCreating": "Being Created",
         "resourceBeingDeleted": "Being Deleted",
+        "resourceDeleting": "Being Deleted",
         "resourceStarting": "Starting",
         "resourceStopping": "Stopping",
         "resourceRunning": "Running",
+        "resourceProvisioning": "Provisioning",
+        "resourceScaling": "Scaling",
         "connectionError": "Unable to connect to server",
         "retrying-in": "Retrying in",
         "seconds": "seconds",
