--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -386,9 +386,13 @@
         "resourceUnknown": "Okänd",
         "resourceStopped": "Stoppad",
         "resourceBeingCreated": "Skapas",
+        "resourceCreating": "Skapas",
         "resourceBeingDeleted": "Raderas",
+        "resourceDeleting": "Raderas",
         "resourceStarting": "Startar",
         "resourceStopping": "Stannar",
+        "resourceProvisioning": "Förbereder",
+        "resourceScaling": "Ändrar storlek",
         "resourceRunning": "OK",
         "connectionError": "Kunde inte ansluta till servern",
         "retrying-in": "Försöker igen om",
