Support VM v2, Add alert provider, CI/CD TSC check, Beta channel switcher (#241)
* Bump dependencies

* Convert to Typescript, minor fixes (#216)

* Begin rewrite to TS

* Batch rename

* Add some more types

* Install kthcloud-types package

* Cleanup and fix more types

* Format

* Add formatting script and update dependencies

* Convert prop-types to ts

* Fix format

* Fix comma after TB of memory, fix #212

* Fix formatting

* Fix import paths, #211

* More types #211

* Fix more types #211

* Fix some types #211 and a bug in the swedish locale for RFC1035Input

* Add some more types #211

* Fix formatting

* Fix some more types #211

* More types #211

* Convert more types #211

* Fix more types #211

* Fix more types #211

* Fix more types #211

* Fix more types #211

* Clear on reconnect option in deploy logs, fixes #214

* Fix formatting

* Fetch tier info from API, closes #213, add more types for #211

* Finalize #211

* Bump dependencies

* Show both zone description and name

* Bump dependencies

* Fix prefer-const

* Unfinished VM v2 (#224)

* Begin work for vmv2

* More VM v2 work

* Add vmv2 beta warning

* Add TSC to code format check GitHub action  #218

* rename tsc action, closes #218

* Add more VM v2 features (#238)

* Begin GPU manager #225

* Fix formatting

* Update DangerZone Transfer ownership to VM v2 #228

* Proxy manager use VM v2 api #226

* Bump dependencies

* Move to CI/CD npm package, bump dependencies

* Cleanup GPU #225

* Fix formatting

* Fix warnings

* Fix VM v2 command API renamed to action, closes #237

* Show GPU in deploy page

* Cleanup GpuManager #255

* Fix missing space in profile

* Disable proxy manager

* CI passing, Add alert service, Cleanup (#239)

* Begin GPU manager #225

* Fix formatting

* Update DangerZone Transfer ownership to VM v2 #228

* Proxy manager use VM v2 api #226

* Bump dependen

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -387,10 +387,14 @@
         "resourceUnknown": "Unknown",
         "resourceStopped": "Stopped",
         "resourceBeingCreated": "Being Created",
+        "resourceCreating": "Being Created",
         "resourceBeingDeleted": "Being Deleted",
+        "resourceDeleting": "Being Deleted",
         "resourceStarting": "Starting",
         "resourceStopping": "Stopping",
         "resourceRunning": "Running",
+        "resourceProvisioning": "Provisioning",
+        "resourceScaling": "Scaling",
         "connectionError": "Unable to connect to server",
         "retrying-in": "Retrying in",
         "seconds": "seconds",
@@ -415,6 +419,7 @@
         "replicas-saving": "Saving replicas...",
         "could-not-save-replicas": "Could not save replicas: ",
         "replicas-shutdown-warning": "This will shut down your deployment. Are you sure?",
+        "max-replicas": "Maximum replicas: ",
         "members": "Members",
         "share-with-team-description": "Share with team",
         "share-with-team-action": "share with team",
@@ -446,7 +451,7 @@
         "edit-domain": "Edit domain",
         "clear-domain": "Clear domain",
         "setup-custom-domain-0": "Point a CNAME record to app.cloud.cbh.kth.se and enter your domain below.",
-        "setup-custom-domain-0-warning": "NB! If you are using Cloudflare or some other proxy service, disable the proxy so our DNS lookup resolves correctly. You can reenable the proxy after the verification if completed.",
+        "setup-custom-domain-0-warning": "NB! If you are using Cloudflare or some other proxy service, disable the proxy so our DNS lookup resolves correctly. You can reenable the proxy after the verification is completed.",
         "setup-custom-domain-1": "Verify domain ownership by adding a TXT record with the value below to your domain.",
         "setup-custom-domain-1-table": "Your DNS records should look something like this",
         "setup-custom-domain-2": "Done! Your deployment should soon be accessible using your domain. You can check the status on the domain section.",
@@ -472,6 +477,29 @@
         "saving-name": "Saving name...",
         "rfc-1035-1": " must adhere to ",
         "rfc-1035-2": ": only lowercase alphanumeric characters or '-', max 63 characters, start with a letter, and end with an alphanumeric character.",
-        "clear-on-reconnect": "Clear on reconnect"
+        "clear-on-reconnect": "Clear on reconnect",
+        "vmv1-deprecation": "This VM is using an unsupported hypervisor. Please recreate it to use the latest features.",
+        "deprecated": "Deprecated",
+        "wait-in-line": "Wait in line",
+        "available": "Available",
+        "total": "Total",
+        "gpu-types": "GPU types",
+        "gpu-leases": "GPU leases",
+        "nothing-to-see-here": "Nothing to see here 🌞",
+        "already-active": "Already active",
+        "activate": "Activate",
+        "create-a-vm-first": "Create a VM first",
+        "position-in-line": "Position in line",
+        "lease-duration": "Lease duration",
+        "created-at": "Created at",
+        "select-vm": "Select VM",
+        "relax-and-enjoy-the-sun": "Relax and enjoy the sun 🌞",
+        "waiting-for-gpu-lease": "You are in line for a GPU lease. You will be notified when it is your turn.",
+        "gpu-groups-subheader": "These are all the GPUs on kthcloud. You can wait in line and receive access once it becomes available.",
+        "gpu-leases-subheader": "The currents GPU leases at your disposal. Use it or give it back, it's up to you.",
+        "manage-gpu-leases": "Manage GPU leases",
+        "switch-to-beta": "Switch to beta",
+        "switch-to-release": "Switch to release",
+        "secrets-are-redacted": "Secrets are redacted"
     }
 }
