Fix creating and deleting labels

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -387,9 +387,9 @@
         "resourceUnknown": "Unknown",
         "resourceStopped": "Stopped",
         "resourceBeingCreated": "Being Created",
-        "resourceCreating": "Being Created",
+        "resourceCreating": "Creating",
         "resourceBeingDeleted": "Being Deleted",
-        "resourceDeleting": "Being Deleted",
+        "resourceDeleting": "Deleting",
         "resourceStarting": "Starting",
         "resourceStopping": "Stopping",
         "resourceRunning": "Running",
