Fix snapshot in tiers page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -339,7 +339,7 @@
         "previous": "Previous",
         "next": "Next",
         "finish": "Finish",
-        "landing-hero-gpu": "GPUs",
+        "landing-hero-gpu": "GPU",
         "landing-hero-cpu": "CPU cores",
         "landing-hero-ram": "Terabytes of memory",
         "landing-intro-header": "Welcome to",
