--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -513,6 +513,9 @@
         "security-details": "Säkerhetsuppgifter",
         "kubernetes-error": "Fel från Kubernetes",
         "owner": "Ägare",
-        "member": "Medlem"
+        "member": "Medlem",
+        "select-zone": "Välj zon",
+        "gpu-zone-subheader": "Det här grafikkortet finns i flera zoner. Välj samma zon som virtuella maskinen du vill installera grafikkortet på.",
+        "select-vm-gpu": "Välj en virtuell maskin att installera grafikkortet på."
     }
 }
