--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -261,7 +261,7 @@
         "copied": "Kopierat!",
         "select-port": "Välj port för proxy till",
         "admin-leased-until": "Lånat till",
-        "specs-subheader": "Ändra storlek av maskinen utifrån dina behov",
+        "specs-subheader": "Ändra storlek utifrån dina behov",
         "onboarding-deployments": "Resurstyp: Deployments",
         "resource-kubernetes-deployment": "Kubernetes deployment",
         "tcp-first": "Exponera en TCP port först",
