--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -516,6 +516,8 @@
         "member": "Medlem",
         "select-zone": "Välj zon",
         "gpu-zone-subheader": "Det här grafikkortet finns i flera zoner. Välj samma zon som virtuella maskinen du vill installera grafikkortet på.",
-        "select-vm-gpu": "Välj en virtuell maskin att installera grafikkortet på."
+        "select-vm-gpu": "Välj en virtuell maskin att installera grafikkortet på.",
+        "replica-quota": "Ökning av kopior kommer att multiplicera CPU- och RAM-användningen för denna deployment.",
+        "per-replica": "per kopia"
     }
 }
