--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -518,6 +518,9 @@
         "gpu-zone-subheader": "Det här grafikkortet finns i flera zoner. Välj samma zon som virtuella maskinen du vill installera grafikkortet på.",
         "select-vm-gpu": "Välj en virtuell maskin att installera grafikkortet på.",
         "replica-quota": "Ökning av kopior kommer att multiplicera CPU- och RAM-användningen för denna deployment.",
-        "per-replica": "per kopia"
+        "per-replica": "per kopia",
+        "ready": "Redo",
+        "occupied": "Upptagna",
+        "unavailable": "Otillgängliga"
     }
 }
