Show desired but not yet existing

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -522,6 +522,7 @@
         "per-replica": "per replica",
         "ready": "Ready",
         "occupied": "Occupied",
-        "unavailable": "Unavailable"
+        "unavailable": "Unavailable",
+        "wanted": "Wanted"
     }
 }
