--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -521,6 +521,7 @@
         "per-replica": "per kopia",
         "ready": "Redo",
         "occupied": "Upptagna",
-        "unavailable": "Otillgängliga"
+        "unavailable": "Otillgängliga",
+        "wanted": "Önskade"
     }
 }
