Renamed wanted to desired, changed the anchor point of the menu, changed z-index, made sure the gap is at minimum 2px on the replica status display so that it is clear to see multiple with the same status regardless of screen resolution and prevented scroll locking when opening the expanded view

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -523,6 +523,6 @@
         "ready": "Ready",
         "occupied": "Occupied",
         "unavailable": "Unavailable",
-        "wanted": "Wanted"
+        "desired": "Desired"
     }
 }
