--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -522,6 +522,6 @@
         "ready": "Redo",
         "occupied": "Upptagna",
         "unavailable": "Otillgängliga",
-        "wanted": "Önskade"
+        "desired": "Önskade"
     }
 }
