Updated the button size and the spacing. Changed from MenuItemto Typography(not clickable anymore) . Added a header to the dropdown with i18n locale. If there are 20 or more replicas, the border (gap) is removed and they just become solid colors.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -523,6 +523,7 @@
         "ready": "Ready",
         "occupied": "Occupied",
         "unavailable": "Unavailable",
-        "desired": "Desired"
+        "desired": "Desired",
+        "replica-status": "Replica status"
     }
 }
