--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -522,6 +522,7 @@
         "ready": "Redo",
         "occupied": "Upptagna",
         "unavailable": "Otillgängliga",
-        "desired": "Önskade"
+        "desired": "Önskade",
+        "replica-status": "Status på kopior"
     }
 }
