--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -93,7 +93,7 @@
         "create-deployment-image-subheader": "If you would like to use a prebuilt image, enter its name below. For example mongo, mongo:4.4 or quay.io/keycloak/keycloak",
         "create-deployment-custom-domain": "Custom Domain",
         "create-deployment-custom-domain-subheader": "Specify a custom domain. Add a CNAME record for this domain pointing to app.cloud.cbh.kth.se. If you are using Cloudflare or some other proxy service, disable the proxy so our DNS lookup resolves correctly. You can reenable the proxy after the deployment is created.",
-        "run-args": "Run arguments",
+        "run-args": "Image start arguments",
         "create-deployment-domain": "Domain",
         "create-deployment-domain-example": "example.com",
         "create-deployment-env": "Environment variables",
@@ -198,7 +198,7 @@
         "danger-zone-subheader": "These secrets are sensitive and should not be public. Add them to your GitHub repository as secrets.",
         "saving-image-update": "Saving image update...",
         "could-not-save-image": "Could not save image: ",
-        "image-subheader": "Edit or update your deployment's image. For example mongo, mongo:4.4 or quay.io/keycloak/keycloak",
+        "image-subheader": "Configure settings related to your deployment's image",
         "logs": "Logs",
         "logs-subheader": "View logs from your deployment.",
         "copy": "Copy",
@@ -530,6 +530,7 @@
         "copied-user-id": "Copied user ID",
         "error-copying-user-id-user-is-null": "Could not copy user ID from user since user is null",
         "not-permitted-to-gpu-page": "Cannot access GPU page: Not allowed to use GPUs",
-        "nothing-to-do": "Nothing to do"
+        "nothing-to-do": "Nothing to do",
+        "image-tag": "Image tag"
     }
 }
