Show correct zone deployment endpoint for custom domain setup, closes #209

--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -316,7 +316,6 @@
         "download": "Ladda ner",
         "protocol": "Protokoll",
         "choose-zone-subheader-1": "Din valda zon bestämmer var din ",
-        "create-deployment-custom-domain-subheader": "Ange en egen domän. Lägg till en CNAME-record som pekar på app.cloud.cbh.kth.se. Om du använder Cloudflare eller någon annan proxytjänst, inaktivera proxyn så att vår DNS-sökning löser sig korrekt. Du kan återaktivera proxyn efter att resursen skapats.",
         "admin-specs": "Specifikationer",
         "reboot": "Starta om",
         "resouce-comparison-stateless-frontend": "Frontend-tjänst: t.ex. React, AngularJS",
@@ -342,7 +341,6 @@
         "resouce-comparison-image-processing-services": "Bildbehandlingstjänster: t.ex. Pillow, OpenCV",
         "button-change-language": "Change language",
         "page-not-found": "Hoppsan! Sidan hittades inte",
-        "cname-record": "Du behöver peka domänen till app.cloud.cbh.kth.se med en CNAME record",
         "stop": "Stäng av",
         "could-not-change-ports": "Kunde inte uppdatera portar: ",
         "connection-status": "Anslutningsstatus",
@@ -451,7 +449,8 @@
         "setup-domain": "Konfigurera domän",
         "edit-domain": "Redigera domän",
         "clear-domain": "Ta bort domän",
-        "setup-custom-domain-0": "Peka din domän med en CNAME-record till app.cloud.cbh.kth.se och ange din domän nedan.",
+        "setup-custom-domain-0-0": "Peka din domän med en CNAME-record till ",
+        "setup-custom-domain-0-1": " och ange din domän nedan.",
         "setup-custom-domain-0-warning": "OBS! Om du använder en proxytjänst som Cloudflare, inaktivera proxyn så att vår DNS-sökning löser sig korrekt. Du kan återaktivera proxyn efter att domänen verifierats.",
         "setup-custom-domain-1": "Verifiera ägarskap av din domän genom en TXT-record med följande värde.",
         "setup-custom-domain-1-table": "Dina DNS-inställningar bör se ut så här",
