--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -92,7 +92,6 @@
         "create-deployment-image": "Image",
         "create-deployment-image-subheader": "If you would like to use a prebuilt image, enter its name below. For example mongo, mongo:4.4 or quay.io/keycloak/keycloak",
         "create-deployment-custom-domain": "Custom Domain",
-        "create-deployment-custom-domain-subheader": "Specify a custom domain. Add a CNAME record for this domain pointing to app.cloud.cbh.kth.se. If you are using Cloudflare or some other proxy service, disable the proxy so our DNS lookup resolves correctly. You can reenable the proxy after the deployment is created.",
         "run-args": "Image start arguments",
         "create-deployment-domain": "Domain",
         "create-deployment-domain-example": "example.com",
@@ -246,7 +245,6 @@
         "new-proxy": "New proxy",
         "select-port": "Select port to proxy to",
         "admin-name-call-to-action": "Proxy will have name: ",
-        "cname-record": "You need a CNAME record to app.cloud.cbh.kth.se",
         "deploy-proxy": "Deploy proxy",
         "url": "URL",
         "tcp-first": "Create a TCP port forwarding rule first",
@@ -454,7 +452,8 @@
         "setup-domain": "Setup domain",
         "edit-domain": "Edit domain",
         "clear-domain": "Clear domain",
-        "setup-custom-domain-0": "Point a CNAME record to app.cloud.cbh.kth.se and enter your domain below.",
+        "setup-custom-domain-0-0": "Point a CNAME record to ",
+        "setup-custom-domain-0-1": " and enter your domain below.",
         "setup-custom-domain-0-warning": "NB! If you are using Cloudflare or some other proxy service, disable the proxy so our DNS lookup resolves correctly. You can reenable the proxy after the verification is completed.",
         "setup-custom-domain-1": "Verify domain ownership by adding a TXT record with the value below to your domain.",
         "setup-custom-domain-1-table": "Your DNS records should look something like this",
