--- a/src/locales/se.json
+++ b/src/locales/se.json
@@ -240,7 +240,7 @@
         "error-creating-deployment": "Kunde inte skapa deployment",
         "landing-intro-footer": "Registrera dig idag kostnadsfritt - allt du behöver är ett KTH-konto.",
         "your-snapshots": "Dina avbildningar",
-        "proxies-subheader-2": "Det gör så du kommer åt den med en snygg länk istället för en slumpmässig port.",
+        "proxies-subheader-2": "Det gör så du kommer åt den med en ordentlig länk istället för en slumpmässig port.",
         "choose-zone": "Välj zon",
         "zone": "Zon",
         "overview": "Överblick",
