Created a context that wraps ReactKeycloakProvider and makes AuthClientEvents and AuthClientErrors available. Implemented a check if there is an error inside `ProtectedRoute.tsx` and if there is an error just redirect to / (the landing page) and in the landing page a snackbar will be enqueued if an error is present, and the landing page will appear as if you are logged out.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -534,6 +534,7 @@
         "too-many-run-args": "Too many run args, max 100",
         "pending-migrations": "Pending migrations",
         "migration": "Migration",
-        "of": "of"
+        "of": "of",
+        "error-connecting-to-iam": "Error connecting to IAM"
     }
 }
