--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -207,7 +207,7 @@
         "line-wrap": "Line wrap",
         "visibility-saving": "Saving visibility...",
         "could-not-save-visibility": "Could not save visibility: ",
-        "visibility-subheader": "Choose whether to make this deployment hidden from the internet",
+        "visibility-subheader": "Choose the visibility level of this deployment",
         "lease-gpu": "Lease GPU",
         "lease-gpu-forever": "Lease GPU forever",
         "renew-gpu-lease": "Renew GPU lease",
@@ -534,6 +534,9 @@
         "too-many-run-args": "Too many run args, max 100",
         "pending-migrations": "Pending migrations",
         "migration": "Migration",
-        "of": "of"
+        "of": "of",
+        "admin-visibility-private-teams": "Private (Teams)",
+        "admin-visibility-private-self": "Private (Only you)",
+        "admin-visibility-hidden": "Hidden"
     }
 }
