rm "hidden" + add tooltips

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -535,8 +535,9 @@
         "pending-migrations": "Pending migrations",
         "migration": "Migration",
         "of": "of",
-        "admin-visibility-private-teams": "Private (Teams)",
-        "admin-visibility-private-self": "Private (Only you)",
-        "admin-visibility-hidden": "Hidden"
+        "admin-visibility-auth": "Private (auth proxy)",
+        "visibility-public-tooltip": "Your deployment is publicly accessible on the internet.",
+        "visibility-private-tooltip": "Your deployment is private and not reachable on the internet. Only internal traffic is allowed in (traffic between deployments).",
+        "visibility-auth-tooltip": "Your deployment is private and reacheble on the internet through an authentication proxy, this limits the allowed traffic."
     }
 }
