--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -538,6 +538,6 @@
         "admin-visibility-auth": "Private (auth proxy)",
         "visibility-public-tooltip": "Your deployment is publicly accessible on the internet.",
         "visibility-private-tooltip": "Your deployment is private and not reachable on the internet. Only internal traffic is allowed in (traffic between deployments).",
-        "visibility-auth-tooltip": "Your deployment is private and reacheble on the internet through an authentication proxy, this limits the allowed traffic."
+        "visibility-auth-tooltip": "Your deployment is private and reachable on the internet through an authentication proxy, this limits the allowed traffic."
     }
 }
